--- a/base.user.css.jinja2
+++ b/base.user.css.jinja2
@@ -25,6 +25,7 @@
         } else if github_auto_theme == dark {
             {{ colors["dark!i"] }}
         } else if github_auto_theme == truly_dark {
+            {{ colors["dark!i"] }}
             {{ colors["truly_dark!i"] }}
         } else if github_auto_theme == truly_darker {
             {{ colors["truly_darker!i"] }}
